<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://www.gueei.com/android-binding/"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/serverAddress"
        binding:text="ServerAddress">
    </EditText>
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/port"
        binding:text="Port">
    </EditText>
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/userName"
        binding:text="UserName">
        <requestFocus />
    </EditText>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_playCheckpointSound"
        binding:checked="PlayCheckpointSound" />
    
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_displayCheckpointCameraPreview"
        binding:checked="DisplayCheckpointCameraPreview" />
	
    <Button
		android:layout_width="130dp"
		android:layout_height="65dp"
		android:text="@string/options_save"
		binding:onClick="Save" />
    
</LinearLayout>
